feat: integrate some basic authentication
