# pkg/router/router.go
@@ -2,9 +2,11 @@ package router
 
 import (
 	"context"
+	"fmt"
 	"io"
 	"net/http"
 	"path"
+	"strings"
 	"time"
 
 	"github.com/getkin/kin-openapi/openapi3"
@@ -15,13 +17,16 @@ import (
 	v1 "github.com/gopad/gopad-api/pkg/api/v1"
 	"github.com/gopad/gopad-api/pkg/config"
 	"github.com/gopad/gopad-api/pkg/metrics"
+	"github.com/gopad/gopad-api/pkg/middleware/current"
 	"github.com/gopad/gopad-api/pkg/middleware/header"
+	"github.com/gopad/gopad-api/pkg/model"
 	"github.com/gopad/gopad-api/pkg/respond"
 	"github.com/gopad/gopad-api/pkg/service/members"
 	"github.com/gopad/gopad-api/pkg/service/teams"
 	"github.com/gopad/gopad-api/pkg/service/users"
 	"github.com/gopad/gopad-api/pkg/session"
 	"github.com/gopad/gopad-api/pkg/store"
+	"github.com/gopad/gopad-api/pkg/token"
 	"github.com/gopad/gopad-api/pkg/upload"
 	cgmw "github.com/oapi-codegen/nethttp-middleware"
 	"github.com/rs/zerolog/hlog"
@@ -62,6 +67,7 @@ func Server(
 	mux.Use(header.Secure)
 	mux.Use(header.Options)
 	mux.Use(sess.Middleware)
+	mux.Use(current.Middleware)
 
 	mux.Route(cfg.Server.Root, func(root chi.Router) {
 		root.Get("/", func(w http.ResponseWriter, r *http.Request) {
@@ -73,10 +79,6 @@ func Server(
 					sess.Get(
 						r.Context(),
 						"user",
-					),
-					sess.Get(
-						r.Context(),
-						"github",
 					),
 				},
 			)
@@ -131,7 +133,174 @@ func Server(
 				&cgmw.Options{
 					SilenceServersWarning: true,
 					Options: openapi3filter.Options{
-						AuthenticationFunc: func(_ context.Context, _ *openapi3filter.AuthenticationInput) error {
+						AuthenticationFunc: func(ctx context.Context, input *openapi3filter.AuthenticationInput) error {
+							authenticating := &model.User{}
+							scheme := input.SecuritySchemeName
+							operation := input.RequestValidationInput.Route.Operation.OperationID
+
+							logger := log.With().
+								Str("scheme", scheme).
+								Str("operation", operation).
+								Logger()
+
+							switch scheme {
+							case "Cookie":
+								userID := sess.Get(
+									input.RequestValidationInput.Request.Context(),
+									"user",
+								)
+
+								if userID == "" {
+									return fmt.Errorf("no session cookie present")
+								}
+
+								user, err := usersService.AuthByID(
+									ctx,
+									userID,
+								)
+
+								if err != nil {
+									logger.Error().
+										Err(err).
+										Str("user", userID).
+										Msg("failed to find user")
+
+									return fmt.Errorf("failed to find user")
+								}
+
+								logger.Trace().
+									Str("user", userID).
+									Msg("authentication")
+
+								authenticating = user
+
+							case "Header":
+								header := input.RequestValidationInput.Request.Header.Get(
+									input.SecurityScheme.Name,
+								)
+
+								if header == "" {
+									return fmt.Errorf("missing authorization header")
+								}
+
+								t, err := token.Parse(
+									strings.TrimSpace(
+										header,
+									),
+									cfg.Session.Secret,
+								)
+
+								if err != nil {
+									return fmt.Errorf("failed to parse auth token")
+								}
+
+								user, err := usersService.AuthByID(
+									ctx,
+									t.Text,
+								)
+
+								if err != nil {
+									logger.Error().
+										Err(err).
+										Str("user", t.Text).
+										Msg("failed to find user")
+
+									return fmt.Errorf("failed to find user")
+								}
+
+								logger.Trace().
+									Str("user", t.Text).
+									Msg("authentication")
+
+								authenticating = user
+
+							case "Bearer":
+								header := input.RequestValidationInput.Request.Header.Get(
+									"Authorization",
+								)
+
+								if header == "" {
+									return fmt.Errorf("missing authorization header")
+								}
+
+								t, err := token.Parse(
+									strings.TrimSpace(
+										strings.Replace(
+											header,
+											"Bearer",
+											"",
+											1,
+										),
+									),
+									cfg.Session.Secret,
+								)
+
+								if err != nil {
+									return fmt.Errorf("failed to parse auth token")
+								}
+
+								user, err := usersService.AuthByID(
+									ctx,
+									t.Text,
+								)
+
+								if err != nil {
+									logger.Error().
+										Err(err).
+										Str("user", t.Text).
+										Msg("failed to find user")
+
+									return fmt.Errorf("failed to find user")
+								}
+
+								logger.Trace().
+									Str("user", t.Text).
+									Msg("authentication")
+
+								authenticating = user
+
+							case "Basic":
+								username, password, ok := input.RequestValidationInput.Request.BasicAuth()
+
+								if !ok {
+									return fmt.Errorf("missing basic credentials")
+								}
+
+								user, err := usersService.AuthByCreds(
+									ctx,
+									username,
+									password,
+								)
+
+								if err != nil {
+									logger.Error().
+										Err(err).
+										Str("user", username).
+										Msg("wrong credentials")
+
+									return fmt.Errorf("wrong credentials")
+								}
+
+								logger.Trace().
+									Str("user", username).
+									Msg("authentication")
+
+								authenticating = user
+
+							default:
+								return fmt.Errorf("unknown security scheme: %s", scheme)
+							}
+
+							log.Trace().
+								Str("username", authenticating.Username).
+								Str("operation", operation).
+								Msg("authenticated")
+
+							current.SetUser(
+								input.RequestValidationInput.Request.Context(),
+								authenticating,
+							)
+
 							return nil
 						},
 					},
